CMM/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.6.3).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -Wno-incomplete-patterns -Wno-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module CMM.Par
  ( happyError
  , myLexer
  , pProgram
  , pDef
  , pListDef
  , pArg
  , pListArg
  , pStm
  , pListStm
  , pExp6
  , pExp5
  , pExp4
  , pExp3
  , pExp2
  , pExp1
  , pExp
  , pListExp
  , pIncDecOp
  , pMulOp
  , pAddOp
  , pCmpOp
  , pBoolLit
  , pType
  , pListId
  ) where

import Prelude

import qualified CMM.Abs
import CMM.Lex

}

%name pProgram Program
%name pDef Def
%name pListDef ListDef
%name pArg Arg
%name pListArg ListArg
%name pStm Stm
%name pListStm ListStm
%name pExp6 Exp6
%name pExp5 Exp5
%name pExp4 Exp4
%name pExp3 Exp3
%name pExp2 Exp2
%name pExp1 Exp1
%name pExp Exp
%name pListExp ListExp
%name pIncDecOp IncDecOp
%name pMulOp MulOp
%name pAddOp AddOp
%name pCmpOp CmpOp
%name pBoolLit BoolLit
%name pType Type
%name pListId ListId
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!='     { PT _ (TS _ 1)  }
  '&&'     { PT _ (TS _ 2)  }
  '('      { PT _ (TS _ 3)  }
  ')'      { PT _ (TS _ 4)  }
  '*'      { PT _ (TS _ 5)  }
  '+'      { PT _ (TS _ 6)  }
  '++'     { PT _ (TS _ 7)  }
  ','      { PT _ (TS _ 8)  }
  '-'      { PT _ (TS _ 9)  }
  '--'     { PT _ (TS _ 10) }
  '/'      { PT _ (TS _ 11) }
  ';'      { PT _ (TS _ 12) }
  '<'      { PT _ (TS _ 13) }
  '<='     { PT _ (TS _ 14) }
  '='      { PT _ (TS _ 15) }
  '=='     { PT _ (TS _ 16) }
  '>'      { PT _ (TS _ 17) }
  '>='     { PT _ (TS _ 18) }
  'bool'   { PT _ (TS _ 19) }
  'double' { PT _ (TS _ 20) }
  'else'   { PT _ (TS _ 21) }
  'false'  { PT _ (TS _ 22) }
  'if'     { PT _ (TS _ 23) }
  'int'    { PT _ (TS _ 24) }
  'return' { PT _ (TS _ 25) }
  'true'   { PT _ (TS _ 26) }
  'void'   { PT _ (TS _ 27) }
  'while'  { PT _ (TS _ 28) }
  '{'      { PT _ (TS _ 29) }
  '||'     { PT _ (TS _ 30) }
  '}'      { PT _ (TS _ 31) }
  L_doubl  { PT _ (TD $$)   }
  L_integ  { PT _ (TI $$)   }
  L_Id     { PT _ (T_Id $$) }

%%

Double  :: { Double }
Double   : L_doubl  { (read $1) :: Double }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

Id :: { CMM.Abs.Id }
Id  : L_Id { CMM.Abs.Id $1 }

Program :: { CMM.Abs.Program }
Program : ListDef { CMM.Abs.PDefs $1 }

Def :: { CMM.Abs.Def }
Def
  : Type Id '(' ListArg ')' '{' ListStm '}' { CMM.Abs.DFun $1 $2 $4 $7 }

ListDef :: { [CMM.Abs.Def] }
ListDef : {- empty -} { [] } | Def ListDef { (:) $1 $2 }

Arg :: { CMM.Abs.Arg }
Arg : Type Id { CMM.Abs.ADecl $1 $2 }

ListArg :: { [CMM.Abs.Arg] }
ListArg
  : {- empty -} { [] }
  | Arg { (:[]) $1 }
  | Arg ',' ListArg { (:) $1 $3 }

Stm :: { CMM.Abs.Stm }
Stm
  : Exp ';' { CMM.Abs.SExp $1 }
  | Type ListId ';' { CMM.Abs.SDecls $1 $2 }
  | Type Id '=' Exp ';' { CMM.Abs.SInit $1 $2 $4 }
  | 'return' Exp ';' { CMM.Abs.SReturn $2 }
  | 'while' '(' Exp ')' Stm { CMM.Abs.SWhile $3 $5 }
  | '{' ListStm '}' { CMM.Abs.SBlock $2 }
  | 'if' '(' Exp ')' Stm 'else' Stm { CMM.Abs.SIfElse $3 $5 $7 }

ListStm :: { [CMM.Abs.Stm] }
ListStm : {- empty -} { [] } | Stm ListStm { (:) $1 $2 }

Exp6 :: { CMM.Abs.Exp }
Exp6
  : BoolLit { CMM.Abs.EBool $1 }
  | Integer { CMM.Abs.EInt $1 }
  | Double { CMM.Abs.EDouble $1 }
  | Id { CMM.Abs.EId $1 }
  | Id '(' ListExp ')' { CMM.Abs.EApp $1 $3 }
  | Id IncDecOp { CMM.Abs.EPost $1 $2 }
  | IncDecOp Id { CMM.Abs.EPre $1 $2 }
  | '(' Exp ')' { $2 }

Exp5 :: { CMM.Abs.Exp }
Exp5 : Exp5 MulOp Exp6 { CMM.Abs.EMul $1 $2 $3 } | Exp6 { $1 }

Exp4 :: { CMM.Abs.Exp }
Exp4 : Exp4 AddOp Exp5 { CMM.Abs.EAdd $1 $2 $3 } | Exp5 { $1 }

Exp3 :: { CMM.Abs.Exp }
Exp3 : Exp4 CmpOp Exp4 { CMM.Abs.ECmp $1 $2 $3 } | Exp4 { $1 }

Exp2 :: { CMM.Abs.Exp }
Exp2 : Exp2 '&&' Exp3 { CMM.Abs.EAnd $1 $3 } | Exp3 { $1 }

Exp1 :: { CMM.Abs.Exp }
Exp1 : Exp1 '||' Exp2 { CMM.Abs.EOr $1 $3 } | Exp2 { $1 }

Exp :: { CMM.Abs.Exp }
Exp : Id '=' Exp { CMM.Abs.EAss $1 $3 } | Exp1 { $1 }

ListExp :: { [CMM.Abs.Exp] }
ListExp
  : {- empty -} { [] }
  | Exp { (:[]) $1 }
  | Exp ',' ListExp { (:) $1 $3 }

IncDecOp :: { CMM.Abs.IncDecOp }
IncDecOp : '++' { CMM.Abs.OInc } | '--' { CMM.Abs.ODec }

MulOp :: { CMM.Abs.MulOp }
MulOp : '*' { CMM.Abs.OTimes } | '/' { CMM.Abs.ODiv }

AddOp :: { CMM.Abs.AddOp }
AddOp : '+' { CMM.Abs.OPlus } | '-' { CMM.Abs.OMinus }

CmpOp :: { CMM.Abs.CmpOp }
CmpOp
  : '<' { CMM.Abs.OLt }
  | '>' { CMM.Abs.OGt }
  | '<=' { CMM.Abs.OLtEq }
  | '>=' { CMM.Abs.OGtEq }
  | '==' { CMM.Abs.OEq }
  | '!=' { CMM.Abs.ONEq }

BoolLit :: { CMM.Abs.BoolLit }
BoolLit : 'true' { CMM.Abs.LTrue } | 'false' { CMM.Abs.LFalse }

Type :: { CMM.Abs.Type }
Type
  : 'bool' { CMM.Abs.Type_bool }
  | 'int' { CMM.Abs.Type_int }
  | 'double' { CMM.Abs.Type_double }
  | 'void' { CMM.Abs.Type_void }

ListId :: { [CMM.Abs.Id] }
ListId : Id { (:[]) $1 } | Id ',' ListId { (:) $1 $3 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
